name:                elm-debugger
version:             0.1
synopsis:            Server for using the reactive debugger.
description:         Debug Elm code by visualizing the signal graph, pausing/rewind/replay, and hotswapping.
homepage:            http://elm-lang.org/
license:             BSD3
license-file:        LICENSE
author:              Evan Czaplicki
maintainer:          info@elm-lang.org
copyright:           (c) 2014 Evan Czaplicki

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

extra-tmp-files:       public/build
                     , public/cache

executable elm-debugger
  main-is:             Server.hs
  other-extensions:    OverloadedStrings
  ghc-options:         -threaded -O2 -rtsopts "-with-rtsopts=-N -I4"
  build-depends:       base
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , containers
                     , cmdargs
                     , directory
                     , Elm >= 0.12
                     , filepath
                     , HTTP
                     , mtl
                     , process
                     , snap-core
                     , snap-server
                     , unordered-containers

  hs-source-dirs:      server
  default-language:    Haskell2010